--- a/src/styles/defaults.css
+++ b/src/styles/defaults.css
@@ -15,7 +15,8 @@ body {
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 /* Títulos de nível 1 */
@@ -97,28 +98,4 @@ input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
-nav .logo{
-    height: 80px;
-}
 
-nav .menu{
-    display: flex;
-    flex-direction: column;
-    flex:1;
-    height: 60px;
-}
-
-nav .top{
-    display: flex;
-    justify-content: space-between;
-    flex: 1;
-}
-nav .bottom{
-    justify-content: space-between;
-    display: flex;
-    flex: 1;
-}
-
-nav .input-group{
-    width: 50%;
-}
